# echo

./: LICENSE  README.md  pyproject.toml
peoplejoin/src/async_collab/: api.py  settings.py
peoplejoin/src/async_collab/agent/: agent_config.py  base_agent.py
peoplejoin/src/async_collab/core/: bot.py  document.py  message.py
peoplejoin/src/async_collab/llm/: llm_client.py  llm_client_service.py
peoplejoin/src/async_collab/orchestrator/: datum.py  orchestrator.py  prompt_builder.py
peoplejoin/src/async_collab/orchestrator/orchestrators/event_reactive/: reactive_orchestrator.py  reactive_promptbuilder.py
peoplejoin/src/async_collab/orchestrator/orchestrators/event_reactive_func_calling/: reactive_orchestrator.py  reactive_promptbuilder.py
peoplejoin/src/async_collab/plugins/plugins/: enterprise_plugin.py
peoplejoin/src/async_collab/scenarios/people_join_qa/agent_configs/: spider_sample.json  spider_sample_func.json
peoplejoin/src/async_collab/tenant/: tenant.py  tenant_loaders.py
peoplejoin/src/data_preparation/: common.py
peoplejoin/src/data_preparation/multinews/: multinews_common.py
peoplejoin/src/data_preparation/spider/: spider_common.py
peoplejoin/src/evaluation/: eval.py  eval_impls.py  eval_manager.py
peoplejoin/src/experimentation/: experiment_with_hitl_or_simulation.py  offline_compute.py  run_evals.py  sim_hitl_exp_config.py  simulated_user.py
peoplejoin/workspace/: analyze_json_complexity.py  data_analysis.py
peoplejoin/workspace/scripts/: collate.py  eval.sh  eval_all.sh  make_exp_order.py  make_peoplejoinqa_S.sh  run_experiments.py  run_peoplejoinqa_S.ps1  run_peoplejoinqa_S.sh  run_stateful_experiments.sh
xminigrid/: README.md  api_call.py  llm_local.py  logging_config.py  manual_control.py  offline_compute.py  plot.ipynb  prompts.py  run.py  utils.py
xminigrid/scripts/: ablation.ps1  collate.py  run.ps1  run.sh
